--- a/Pawsome/Info.plist
+++ b/Pawsome/Info.plist
@@ -2,17 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>GoogleSignIn</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq.apps.googleusercontent.com</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>This app requires access to the camera to allow users to capture images of cats.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to your photo library to display and select images of cats.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This app requires access to the microphone to capture audio for videos.</string>
-	<key>GIDClientID</key>
-	<string>70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq.apps.googleusercontent.com</string>
 </dict>
 </plist>
