--- a/Pawsome/GoogleService-Info.plist
+++ b/Pawsome/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PROJECT_ID</key>
 	<string>pawsome--signin-ios</string>
 	<key>STORAGE_BUCKET</key>
-	<string>pawsome--signin-ios.appspot.com</string>
+	<string>pawsome--signin-ios.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
