--- a/Pawsome/Info.plist
+++ b/Pawsome/Info.plist
@@ -2,24 +2,34 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>GoogleSignIn</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq</string>
-			</array>
-		</dict>
-	</array>
-	<key>GIDClientID</key>
-	<string>70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq.apps.googleusercontent.com</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
+    <!-- App Category for Mac App Store -->
+    <key>LSApplicationCategoryType</key>
+    <string>public.app-category.lifestyle</string>
+
+    <!-- Google Sign-In -->
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string>GoogleSignIn</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq</string>
+            </array>
+        </dict>
+    </array>
+
+    <key>GIDClientID</key>
+    <string>70386804757-8dp73qcfvb5coce3hh8me5cju47v75hq.apps.googleusercontent.com</string>
+
+    <!-- Background modes -->
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+    </array>
+
+    <!-- Add your other existing keys here (e.g., NSCameraUsageDescription, Firebase configs, etc.) -->
 </dict>
 </plist>
