--- a/Pawsome/Pawsome.entitlements
+++ b/Pawsome/Pawsome.entitlements
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!--
+   Pawsome.entitlements
+   Pawsome
+
+   Created by Rishi Jivani on 30/12/2025.
+   Copyright (c) 2025 ___ORGANIZATIONNAME___. All rights reserved.
+-->
 <plist version="1.0">
-<dict>
-	<key>aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.applesignin</key>
-	<array>
-		<string>Default</string>
-	</array>
-	<key>com.apple.developer.aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.devicecheck.app-attest-opt-in</key>
-	<array>
-		<string>CDhash</string>
-	</array>
-	<key>com.apple.developer.devicecheck.appattest-environment</key>
-	<string>production</string>
-	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array/>
-	<key>com.apple.developer.icloud-services</key>
-	<array/>
-</dict>
+<dict/>
 </plist>
