--- a/Pawsome/Pawsome.entitlements
+++ b/Pawsome/Pawsome.entitlements
@@ -7,6 +7,6 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.developer.devicecheck.appattest-environment</key>
-	<string>development</string>
+	<string>production</string>
 </dict>
 </plist>
